release 4.40.0